compiler/tests/sct-checker/fail/bug_1189_warning.jazz
export fn test (reg u64 secret) -> reg u64 {
  reg u64 z;
  reg u64 x = 0;
  stack u64[2] t;
  inline int i;
  for i = 0 to 2 {
    t[x] = 0; /* leak x */
    x = secret;
  }
  z = t[0];
  return z;
}